--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -17,6 +17,7 @@
     "@expo/html-elements": "0.5.1",
     "@expo/vector-icons": "^13.0.0",
     "@gorhom/bottom-sheet": "^4.4.7",
+    "@gorhom/portal": "^1.0.14",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.1.7",
     "add": "^2.0.6",
