--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -30,17 +30,19 @@
     "expo-splash-screen": "~0.20.4",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
-    "expo-updates": "~0.18.8",
+    "expo-updates": "~0.18.9",
     "expo-web-browser": "~12.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.1",
     "react-native-gesture-handler": "2.12.0",
+    "react-native-get-random-values": "^1.9.0",
     "react-native-reanimated": "3.3.0",
     "react-native-reanimated-carousel": "^3.4.0",
     "react-native-safe-area-context": "4.6.4",
     "react-native-screens": "~3.22.1",
     "react-native-svg": "13.9.0",
+    "react-native-url-polyfill": "^1.3.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.19.6",
     "yarn": "^1.22.19",
