--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "cuid": "^3.0.0",
     "moti": "latest",
     "nativewind": "2.0.11",
     "react-native-paper": "^5.9.0",
