--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "jtabs",
-  "main": "expo-router/entry",
+  "name": "expo-app",
+  "main": "index.js",
   "version": "1.0.0",
   "scripts": {
     "start": "npx expo start",
@@ -21,8 +21,10 @@
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.1.7",
     "add": "^2.0.6",
+    "app": "*",
     "expo": "~49.0.2",
     "expo-av": "~13.4.1",
+    "expo-constants": "~14.4.2",
     "expo-font": "~11.4.0",
     "expo-image": "1.3.1",
     "expo-linking": "~5.0.2",
@@ -38,8 +40,8 @@
     "react-native-gesture-handler": "2.12.0",
     "react-native-reanimated": "3.3.0",
     "react-native-reanimated-carousel": "^3.4.0",
-    "react-native-safe-area-context": "4.6.4",
-    "react-native-screens": "~3.22.1",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.19.6",
